src/ffi.rs

extern "C" {
    pub fn neoradio2_request_settings(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_settings(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        settings: *mut neoRADIO2_settings,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_settings(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        settings: *mut neoRADIO2_settings,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_settings_successful(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_chain_count(
        handle: *mut ::std::os::raw::c_long,
        count: *mut ::std::os::raw::c_int,
        identify: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_calibration(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_calibration_array(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
        arr: *mut f32,
        arr_size: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_calibration_points(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_calibration_points_array(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
        arr: *mut f32,
        arr_size: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_calibration(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
        arr: *mut f32,
        arr_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_calibration_successful(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_calibration_points(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
        arr: *mut f32,
        arr_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_calibration_points_successful(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_store_calibration(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_is_calibration_stored(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        stored: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_calibration_is_valid(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        is_valid: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_clear_calibration(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_calibration_info(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_calibration_info(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        header: *mut neoRADIO2frame_calHeader,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_toggle_led(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        mode: ::std::os::raw::c_int,
        led_enables: ::std::os::raw::c_int,
        ms: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_toggle_led_successful(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_status(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        bitfield: ::std::os::raw::c_int,
        type_: StatusType,
        status: *mut CommandStatus,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_default_settings(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_statistics(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_statistics(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        stats: *mut neoRADIO2_PerfStatistics,
    ) -> ::std::os::raw::c_int;
}
